fix: active page not highlighted themeing not affecting scrollbars

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -74,8 +74,25 @@
 
   body {
     @apply bg-background text-foreground font-Geist overflow-x-hidden;
+
   }
 }
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+  height: 10px;
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  border-radius: 5px;
+  @apply bg-background;
+}
+
+*::-webkit-scrollbar-thumb {
+  @apply bg-border pb-2 rounded-md;
+}
+
 
 /*
 * Do Not Touch! : custom css classes
